Status screen is almost done. Got a refresher, got a checker, everything is all good.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="CSHGreen"> #5BA215</color>
+    <color name="CSHRed"> #E11C52</color>
+    <color name="Black"> #000000</color>
 </resources>
