--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Black"
     tools:context=".HomeActivity">
 
     <android.support.design.widget.BottomNavigationView
@@ -36,7 +37,10 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/HomeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/message"
@@ -45,6 +49,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/title_home"
+            android:textColor="#ffffff"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,13 +60,13 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="336dp"
             android:layout_marginBottom="8dp"
-            android:background="#737373"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#ffffff"
+            app:layout_constraintBottom_toTopOf="@+id/nextLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.996"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.566" />
+            app:layout_constraintTop_toBottomOf="@+id/eventTime"
+            app:layout_constraintVertical_bias="0.571" />
 
         <TextView
             android:id="@+id/eventTitle"
@@ -72,6 +77,7 @@
             android:text="Event Title"
             android:textAlignment="center"
             android:textSize="32sp"
+            android:textColor="#ffffff"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,6 +90,7 @@
             android:text="Event Time"
             android:textAlignment="center"
             android:textSize="20sp"
+            android:textColor="#ffffff"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,10 +101,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="132dp"
+            android:layout_marginBottom="188dp"
             android:text="Next Event Title"
             android:textAlignment="center"
             android:textSize="18sp"
+            android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -108,9 +116,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="104dp"
+            android:layout_marginBottom="156dp"
             android:text="Next Event Time"
             android:textAlignment="center"
+            android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -120,10 +129,27 @@
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="452dp"
-            android:layout_marginTop="272dp"
+            android:layout_marginTop="216dp"
             android:text="Next Event"
             android:textAlignment="center"
             android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/reservedLabel"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="452dp"
+            android:layout_marginTop="68dp"
+            android:text="Reserved"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:textColor="#ffffff"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
