I'm going to re-build the app to use fragments. I didn't account for the different features very well when I was building the app. Hopefully I can use the API code I already have to do everything I need, as it's going to stay in the MainActivity. The thing that's changed is that the Status is going to have its own Class entirely separate from MainActivity.

--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -1,38 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/Black"
-    tools:context=".HomeActivity">
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation">
-
-    </android.support.design.widget.BottomNavigationView>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/QuickLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/CalendarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.constraint.ConstraintLayout>
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/HomeLayout"
@@ -41,6 +12,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="636dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Status"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499" />
 
         <TextView
             android:id="@+id/message"
@@ -76,8 +60,8 @@
             android:layout_marginTop="96dp"
             android:text="Event Title"
             android:textAlignment="center"
-            android:textSize="32sp"
             android:textColor="#ffffff"
+            android:textSize="32sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -89,8 +73,8 @@
             android:layout_marginTop="156dp"
             android:text="Event Time"
             android:textAlignment="center"
-            android:textSize="20sp"
             android:textColor="#ffffff"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -104,8 +88,8 @@
             android:layout_marginBottom="188dp"
             android:text="Next Event Title"
             android:textAlignment="center"
-            android:textSize="18sp"
             android:textColor="#ffffff"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -132,9 +116,9 @@
             android:layout_marginTop="216dp"
             android:text="Next Event"
             android:textAlignment="center"
+            android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#ffffff"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -146,13 +130,12 @@
             android:layout_marginTop="68dp"
             android:text="Reserved"
             android:textAlignment="center"
+            android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="gone"
-            android:textColor="#ffffff"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
-
 </android.support.constraint.ConstraintLayout>
