--- a/app/src/main/res/drawable/ic_fast_forward_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_fast_forward_black_24dp.xml
@@ -5,5 +5,5 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
+        android:pathData="M4,18l8.5,-6L4,6v12zM13,6v12l8.5,-6L13,6z"/>
 </vector>
