Getting closer to a solution. I hope.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,31 @@
     android:layout_height="match_parent"
     android:background="@color/Black"
     android:visibility="visible"
-    tools:context=".HomeActivity">
+    tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation" />
+
+    <fragment android:name="edu.rit.csh.bettervent.StatusFragment"
+        android:id="@+id/status_fragment"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
+    <fragment android:name="edu.rit.csh.bettervent.ScheduleFragment"
+        android:id="@+id/schedule_fragment"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
+    <fragment android:name="edu.rit.csh.bettervent.QuickModeFragment"
+        android:id="@+id/quick_mode_fragment"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
