--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -9,22 +9,14 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/status_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="672dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp">
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home"
-            android:textColor="#ffffff"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
         <View
             android:layout_width="350dp"
@@ -34,7 +26,7 @@
             android:layout_marginEnd="336dp"
             android:layout_marginBottom="8dp"
             android:background="#ffffff"
-            app:layout_constraintBottom_toTopOf="@+id/nextLabel"
+            app:layout_constraintBottom_toTopOf="@+id/next_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.779"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +87,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nextLabel"
+            app:layout_constraintTop_toBottomOf="@+id/next_label"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
@@ -116,7 +108,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/nextLabel"
+            android:id="@+id/next_label"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="580dp"
@@ -167,7 +159,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.172" />
+            app:layout_constraintVertical_bias="0.271" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
