Made it a little better, but there is definitely a weird bug where events are being added to the weekview 8 times. No idea what that's about. Others are having similar issues, but I think my cause is something else. See the code for more details.

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -10,16 +10,30 @@
         android:id="@+id/week_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:columnGap="1dp"
+        app:eventCornerRadius="4dp"
         app:eventTextColor="@android:color/white"
-        app:timeColumnTextSize="12sp"
-        app:hourHeight="60dp"
-        app:timeColumnPadding="8dp"
-        app:timeColumnTextColor="#0099FF"
-        app:timeColumnBackgroundColor="@android:color/white"
+        app:headerRowBottomLineColor="@color/header_bottom_line"
+        app:headerRowBottomLineWidth="1dp"
         app:headerRowPadding="12dp"
-        app:columnGap="8dp"
-        app:headerRowBackgroundColor="#999999"
-        app:dayBackgroundColor="@android:color/white"
-        app:todayBackgroundColor="#0099FF"/>
+        app:hourHeight="60dp"
+        app:nowLineColor="@color/accent"
+        app:nowLineDotColor="@color/accent"
+        app:nowLineDotRadius="5dp"
+        app:nowLineStrokeWidth="1dp"
+        app:numberOfVisibleDays="3"
+        app:overlappingEventGap="1dp"
+        app:showHeaderRowBottomLine="true"
+        app:showNowLine="true"
+        app:showNowLineDot="true"
+        app:showTimeColumnSeparator="true"
+        app:singleDayHorizontalMargin="8dp"
+        app:timeColumnBackgroundColor="#ffffffff"
+        app:timeColumnPadding="8dp"
+        app:timeColumnSeparatorColor="@color/header_bottom_line"
+        app:timeColumnSeparatorStrokeWidth="1dp"
+        app:timeColumnTextColor="@color/toolbar_text"
+        app:timeColumnTextSize="12sp"
+        app:todayHeaderTextColor="@color/accent" />
 
 </android.support.constraint.ConstraintLayout>
