Fixed the weird bug. Here's the link to the issue that helped me understand it. https://github.com/alamkanak/Android-Week-View/issues/415\#issuecomment-287981984

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -9,7 +9,7 @@
     <com.alamkanak.weekview.WeekView
         android:id="@+id/week_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="607dp"
         app:columnGap="1dp"
         app:eventCornerRadius="4dp"
         app:eventTextColor="@android:color/white"
