--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Event Title"
+            android:text="@string/event_title"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="32sp"
@@ -60,7 +60,7 @@
             android:layout_marginTop="156dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Event Time"
+            android:text="@string/event_time"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="20sp"
@@ -80,7 +80,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="268dp"
-            android:text="Next Event Title"
+            android:text="@string/next_event_title"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="18sp"
@@ -98,7 +98,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="232dp"
-            android:text="Next Event Time"
+            android:text="@string/next_event_time"
             android:textAlignment="center"
             android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="580dp"
             android:layout_marginTop="332dp"
-            android:text="Next Event"
+            android:text="@string/next_event"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="20sp"
@@ -129,7 +129,7 @@
             android:layout_marginTop="68dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Reserved"
+            android:text="@string/reserved"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="40sp"
@@ -149,7 +149,7 @@
             android:layout_marginTop="68dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Free"
+            android:text="@string/free"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="40sp"
