--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="event_color_04">#f8b552</color>
     <color name="toolbar">#efefef</color>
     <color name="header_bottom_line">#EEEEEE</color>
+    <color name="column_separator">#CCCCCC</color>
     <color name="toolbar_text">#8f000000</color>
     <color name="accent">#2789e4</color>
     <color name="default_text">#757575</color>
