Added a refresh button and did some minor bugfixes with the way QuickMode displayed.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,26 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     android:visibility="visible"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation" />
+        android:layout_width="1284dp"
+        android:layout_height="670dp"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    </FrameLayout>
 
     <!--<fragment android:name="edu.rit.csh.bettervent.StatusFragment"-->
         <!--android:id="@+id/status_fragment"-->
@@ -32,6 +43,20 @@
         <!--android:layout_weight="1"-->
         <!--android:layout_width="0dp"-->
         <!--android:layout_height="match_parent" />-->
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/refresh_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="68dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/quantum_ic_refresh_white_24" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
