--- a/app/src/main/res/layout/fragment_quick_mode.xml
+++ b/app/src/main/res/layout/fragment_quick_mode.xml
@@ -10,7 +10,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/quick_mode_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <Button
             android:id="@+id/add_participant_button"
@@ -59,12 +60,13 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/participants_list"
-            android:layout_width="521dp"
+            android:layout_width="520dp"
             android:layout_height="546dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
