--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -8,8 +8,11 @@
 
     <com.alamkanak.weekview.WeekView
         android:id="@+id/week_view"
-        android:layout_width="match_parent"
-        android:layout_height="607dp"
+        android:layout_width="1282dp"
+        android:layout_height="726dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:columnGap="1dp"
         app:eventCornerRadius="4dp"
         app:eventTextColor="@android:color/white"
@@ -17,6 +20,11 @@
         app:headerRowBottomLineWidth="1dp"
         app:headerRowPadding="12dp"
         app:hourHeight="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:nowLineColor="@color/accent"
         app:nowLineDotColor="@color/accent"
         app:nowLineDotRadius="5dp"
